# kubeshield

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: insecure-deployment.yaml  secure-deployment.yaml
kubeshield/: __init__.py  cli.py  models.py  scanner.py
kubeshield/ai/: __init__.py  advisor.py
kubeshield/report/: __init__.py  console.py  json_report.py
kubeshield/rules/: __init__.py  base.py  networking.py  reliability.py  resources.py  security.py
tests/: conftest.py  test_cli.py  test_models.py  test_rules.py  test_scanner.py
tests/fixtures/: insecure-pod.yaml  multi-doc.yaml  secure-pod.yaml
