[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kubeshield"
version = "0.1.0"
description = "AI-powered Kubernetes manifest security scanner"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "José Pérez", email = "jose@gestiondigital.es" },
]
keywords = ["kubernetes", "security", "scanner", "devsecops", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "pyyaml>=6.0",
    "openai>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "pre-commit>=3.0",
]

[project.scripts]
kubeshield = "kubeshield.cli:main"

[project.urls]
Homepage = "https://github.com/joseperez/kubeshield"
Repository = "https://github.com/joseperez/kubeshield"
Issues = "https://github.com/joseperez/kubeshield/issues"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "S", "B", "A", "C4", "SIM", "TCH"]
ignore = ["S101"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["kubeshield"]
omit = ["tests/*"]
